syntax = "proto3";

package rimdesk.product.v1;

import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";

service ProductService {
    rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
    rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
    rpc GetProduct(GetProductRequest) returns (GetProductResponse);
    rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductResponse);
    rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
}

message ListProductsRequest {
}

message ListProductsResponse {
    repeated Product products = 1;
}

message CreateProductRequest {
    ProductRequest product = 1;
    repeated ProductRequest products = 2;
}

message CreateProductResponse {
    Product product = 1;
    repeated Product products = 2;
    int32 created_count = 3;
}

message GetProductRequest {
    string id = 1;
}

message GetProductResponse {
     Product product = 1;
}

message UpdateProductRequest {
    string id = 1;
    ProductRequest product = 2;
}

message UpdateProductResponse {
    Product product = 1;
}

message DeleteProductRequest {
    string id = 1;
}

message DeleteProductResponse {
}


message Product {
    string id = 1;
    string company_id = 2;
    string name = 3;
    string type = 4;
    string category_id = 5;
    string barcode = 6;
    string description = 7;
    float amount = 8;
    float supply_price = 9;
    float retail_price = 10;
    google.protobuf.Timestamp created_at = 11;
}

message ProductRequest {
    string company_id = 1 [(buf.validate.field).required = true];
    string name = 2 [(buf.validate.field).required = true];
    string type = 3 [(buf.validate.field).required = true];
    string category_id = 4 [(buf.validate.field).required = true];
    string barcode = 5 [(buf.validate.field).required = true];
    string description = 6 [(buf.validate.field).required = true];
    float amount = 7 [(buf.validate.field).required = true];
    float supply_price = 8 [(buf.validate.field).required = true];
    float retail_price = 9 [(buf.validate.field).required = true];
}



